# Quotebook-V1

./: .gitignore  .replit  Cargo.toml  README.md  app.py  pyproject.toml  replit.nix
dbschema/: default.esdl
dbschema/migrations/: 00001.edgeql  00002.edgeql
lib/redislite_cache/: __init__.py
src/: main.rs
src/api/: mod.rs
src/quotebook/: __init__.py  __version__.py  app.py  bp.py  bridge.py  config.py  forms.py  models.py
src/quotebook/auth/: __init__.py
src/quotebook/auth/templates/auth/: login.jinja2
src/quotebook/core/: bp.py
src/quotebook/core/templates/: all.html  all.jinja2  base.html  base.jinja2  new.html  view.html
src/quotebook/templates/: base.jinja2  new.jinja2  view.jinja2
