[tool.poetry]
name = "quotebook"
version = "0.3.0"
description = "Quotebook for all your quotes"
authors = ["BD103 <dont@stalk.me>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.0"
Flask-WTF = "^1.0.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Compress = "^1.11"
Flask-Login = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[tool.black]
line-length = 88
target-version = ["py39"]
extend-exclude = '''
/(
    | .venv
)/
'''

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
